# faq_chat

./: .gitignore  0_eda.ipynb  README.md  config.py  main.py  pyproject.toml
DATA/: final_result.csv  final_result_fileted.csv
clients/: chroma.py  open_ai.py  sqlite.py
databases/: sqlite.db
databases/chroma_db/12cccd05-c9d9-4445-a4f6-0287450eb0c9/: index_metadata.pickle
models/: chat_history.py  llm_model.py
routers/: admin.py  health.py  llm.py
schemas/: chat_history.py  llm_model.py
services/: llm_service.py  rag_service.py  session_service.py
test/: chat_demo_1.text  chat_demo_2.text  test_chat_demo_1.py  test_chat_demo_2.py
