[tool.poetry]
name = "faq_chat"
version = "0.1.0"
description = ""
authors = ["ian.so"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.7"
openai = "^1.60.0"
uvicorn = "^0.34.0"
db-sqlite3 = "^0.0.1"
pendulum = "^3.0.0"
sqlalchemy = "^2.0.37"
sqlmodel = "^0.0.22"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"
mypy = "^1.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
